fix: corrected css to wrap the image credit tag

--- a/src/components/ImageUpload/imageUpload.css
+++ b/src/components/ImageUpload/imageUpload.css
@@ -11,7 +11,7 @@
   gap: 10px;
   border: 1px solid #d9d9d9;
   border-radius: 2px;
-  height: 66px;
+  height: auto;
   padding: 8px;
   margin-top: 8px;
 }
@@ -84,6 +84,8 @@
 
 .image-footer .image-contents .image-name-wrapper .image-credits {
   display: flex;
+  flex-wrap: wrap;
+  gap: 2px;
 }
 
 @media (max-width: 480px) {
